# restful_mapper

./: .travis.yml  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  index.html  params.json
include/: collector.h  field.h  iso8601.h  json.h  mapper.h  meta.h  model.h  relation.h  restful_mapper.h
include/restful_mapper/: api.h  collection.h  collector.h  field.h  helpers.h  json.h  mapper.h  meta.h  model.h  model_collection.h  query.h  relation.h
include/restful_mapper/internal/: iso8601.h  json.h  utf8.h  yajl_helpers.h
lib/: .gitignore
src/: api.cpp  collector.cpp  json.cpp  mapper.cpp  query.cpp  utf8.cpp  yajl_helpers.cpp
tests/: CMakeLists.txt  test_api.cpp  test_collector.cpp  test_field.cpp  test_json.cpp  test_mapper.cpp  test_model.cpp  test_query.cpp  test_relation.cpp  test_utf8.cpp
tests/mocks/: requirements.txt  rest_webservice.py
